# lzfse

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  LICENSE  Makefile  README  README.md  appveyor.yml
lzfse.xcodeproj/: project.pbxproj
modules/: Package.cmake.in
src/: lzfse.h  lzfse_decode.c  lzfse_encode.c  lzfse_encode_base.c  lzfse_encode_tables.h  lzfse_fse.c  lzfse_fse.h  lzfse_internal.h  lzfse_main.c  lzvn.h  lzvn_decode_base.c  lzvn_encode_base.c
